# waflow

./: .gitignore  pyproject.toml  render.yaml  vercel.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useApi.ts
frontend/src/pages/: Analytics.tsx  Appointments.tsx  BusinessDetail.tsx  Businesses.tsx  Conversations.tsx  Dashboard.tsx  Payments.tsx  PremiumTaxQA.tsx  Setup.tsx  Simulator.tsx
src/waflow/: __init__.py  ai.py  api.py  cli.py  database.py  demo_data.py  models.py  store.py
