[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waflow"
version = "0.1.0"
description = "WhatsApp AI Assistant platform for small service businesses in Morelia, Mexico"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "WaFlow"}]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "anthropic>=0.40.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
]

[project.scripts]
waflow = "waflow.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
